# FDNN

./: .gitignore  README.md  fdnn_model_notebook.ipynb
FDNN/: README.md  pyproject.toml
FDNN/FDNN/: __init__.py  fdnn.py
